[tool.poetry]
name = "fastpai-service-template"
version = "0.1.0"
description = ""
authors = ["Golubev Vlad <nakmak98@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "0.13.3"
fastapi = "^0.65.1"
SQLAlchemy = "^1.4.15"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
